--- a/style.css
+++ b/style.css
@@ -4,30 +4,32 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-image: linear-gradient(to right, #00b09b, #96c93d); /* Green to Teal */
+    background-image: linear-gradient(to right, red, grey);
 }
-
 
 .container {
     width: 400px;
-    background-color: #fff;
+    background: rgba(255, 255, 255, 0.1); /* Semi-transparent white */
+    backdrop-filter: blur(10px); /* Blurring the background */
     padding: 20px;
     border-radius: 8px; 
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2); /* Enhanced shadow */
 }
-.container textarea{
+
+.container textarea {
     width: 85%;
     outline: none;
-    border: 2px solid black;
+    border: 2px solid rgba(0, 0, 0, 0.5); /* Slightly transparent border */
     padding: 20px;
     font-size: 18px;
     margin-top: 20px;
-    
+    background: rgba(255, 255, 255, 0.8); /* Slightly transparent background */
 }
-.container textarea::placeholder{
+
+.container textarea::placeholder {
     color: black;
-    
 }
+
 .result {
     text-align: center;
     font-size: 1.2em;
